# libemqtt

./: Android.mk  CMakeLists.txt  LICENSE  Makefile  README  README.markdown  TODO  TODO.markdown  pub.c  sub.c
client/: pub.c  pub.py  sub.c  sub.py
include/: libemqtt.h
src/: libemqtt.c
src/python/: emqtt.c  libemqtt.c  python-libemqtt.c  python-mqtt.c  python-mqtt.h  python-mqtt_packet.c  python-mqtt_packet.h
